# A2X-registry

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  README_forAgentTeam.md  README_forDistributed.md  THIRD_PARTY_LICENSES  pyproject.toml  requirements.txt
a2x_registry/: __init__.py
a2x_registry/a2x/: VERSION.md
a2x_registry/auth/: __init__.py  store.py
a2x_registry/backend/: app.py  startup.py
a2x_registry/cluster/: __init__.py  cli.py  config.py  membership.py  peer.py  router.py  state.py  store.py  sweepers.py  transport.py
a2x_registry/common/: __init__.py  llm_client.py  paths.py
a2x_registry/register/: models.py  service.py  store.py
client/: README.md  README_agentteam.md  a2x_backend_client.py  a2x_backend_server.py  a2x_remote_client.py  pyproject.toml
client/a2x_registry_client/: __init__.py  auth.py
docs/: a2x_design.md  architecture_overview.md  auth_design.md  backend_api.md  build_design.md  client_design.md  cluster_design.md  frontend_design.md  heartbeat_design.md  incremental_design.md  register_design.md  search_design.md
examples/client_sdk/: README.md  create_dataset_async.py  create_dataset_sync.py  delete_dataset_async.py  delete_dataset_sync.py  (+25 more)
src/: __init__.py
src/client/: README.md  __init__.py  _internal.py  async_client.py  client.py  models.py  pyproject.toml
src/client/tests/: conftest.py  test_async_client.py  test_internal.py  test_ownership.py
tests/: test_lite_e2e.py  test_registry_formats.py  test_registry_update.py  test_validation.py
todo/: client_design.md  client_design_review.md
(+101 files in other folders)
