[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2x-registry-client"
version = "0.1.0"
description = "Python SDK for the A2X Registry — Agent Team registration and discovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "A2X Registry" }]
keywords = ["a2x", "registry", "agent", "a2a", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://github.com/Weizheng96/A2X-registry-demo-data"

[tool.setuptools]
# Re-map the in-repo `src/client` directory to a published package named
# `a2x_client` so external consumers can `from a2x_client import A2XClient`.
package-dir = { "a2x_client" = "." }
packages = ["a2x_client"]

[tool.setuptools.package-data]
a2x_client = ["py.typed"]
